chore: fix base yaml file

--- a/configs/bulk_base.yaml
+++ b/configs/bulk_base.yaml
@@ -7,9 +7,15 @@ prompt:
 model:
   device_count: 2
   model_name: "Qwen/Qwen2.5-1.5B"
-  vllm_config: { 'max_model_len': 4096, 'tensor_parallel_size': 2, 'gpu_memory_utilization': 0.9,
-         'enforce_eager': True, 'dtype': "bfloat16"
-         } # 'enable_lora': False, 'max_lora_rank': 64, 
+  vllm_config:
+    max_model_len: 4096
+    tensor_parallel_size: 2 # device_count와 같은 정수값 또는 사용하고싶은 GPU 개수
+    gpu_memory_utilization: 0.9
+    enforce_eager: True
+    dtype: "bfloat16"
+    # enable_lora: False  # When using LoRA Adapter
+    # max_lora_rank: 64   # When using LoRA Adapter
+
 
 data: 
   data_path: './data/'
