--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ openpyxl = "^3.1.5"
 omegaconf = "^2.3.0"
 pandas = "2.2.3"
 datasets = "3.1.0"
+langchain = "^0.3.6"
+langchain-openai = "^0.2.5"
+langchain-anthropic = "^0.2.4"
 
 
 [build-system]
